fix(FileTreeComponent): set overflow to auto

--- a/client/src/app/editor/file-tree/file-tree.component.scss
+++ b/client/src/app/editor/file-tree/file-tree.component.scss
@@ -9,7 +9,7 @@
 
 .ml-file-list {
   max-height: 250px;
-  overflow: scroll;
+  overflow: auto;
   list-style: none;
   margin: 0;
   padding-left: 2em;
